temp fix on button cut off at bottom on mobile

--- a/css/LMS.css
+++ b/css/LMS.css
@@ -51,13 +51,15 @@ body{
 	justify-content: center;
 	min-height: 80px;
 	padding: 2px;
+  
 }
 #footer button {
-	font-size: 20px;
+	font-size: 15px;
 	border: 5px solid #064420;
 	width: 49%;
 	height: 100%;
 	margin: 2px;
+  padding-bottom: 50px;
 }
 #donate{
 	font-size: 9px;
